SUBDIRS=libgnomecups po

pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA=libgnomecups-1.0.pc

CLEANFILES=					\
	intltool-extract			\
	intltool-merge				\
	intltool-update

EXTRA_DIST =					\
	libgnomecups-1.0.pc.in                  \
	autogen.sh				\
	intltool-extract.in			\
	intltool-merge.in			\
	intltool-update.in

